начало вёрстки на работе 17.09

--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Игра</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="game"></div>
-
+	<div class="screen-difficult">
+		<div class="difficult">
+			<p class="difficult__title">Выберите сложность</p>
+			<div class="difficult__field-buttons">
+				<button class="difficult__button-easy difficult__button-level" data-level="easy">1</button>
+				<button class="difficult__button-middle difficult__button-level" data-level="middle">2</button>
+				<button class="difficult__button-hard difficult__button-level" data-level="hard">3</button>
+			</div>
+			<button class="difficult__button-start">Старт</button>
+		</div>
+	</div>
 
 	
 </body>
