finished lesson1 without hover

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="game"></div>
 	<div class="screen-difficult">
-		<div class="difficult">
+		<div class="difficult block-message">
 			<p class="difficult__title">Выберите сложность</p>
 			<div class="difficult__field-buttons">
 				<button class="difficult__button-easy difficult__button-level" data-level="easy">1</button>
