--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,27 @@
 	<title>Игра</title>
 	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-	<div class="game"></div>
-	<div class="screen-difficult">
-		<div class="difficult block-message">
-			<p class="difficult__title">Выберите сложность</p>
-			<div class="difficult__field-buttons">
-				<button class="difficult__button-easy difficult__button-level" data-level="easy">1</button>
-				<button class="difficult__button-middle difficult__button-level" data-level="middle">2</button>
-				<button class="difficult__button-hard difficult__button-level" data-level="hard">3</button>
+	<div class="game">
+		<div class="screen-difficult screen">
+			<div class="difficult block-message">
+				<p class="difficult__title">Выберите сложность</p>
+				<div class="difficult__field-buttons">
+					<button class="difficult__button-level" data-level="easy">1</button>
+					<button class="difficult__button-level" data-level="middle">2</button>
+					<button class="difficult__button-level" data-level="hard">3</button>
+				</div>
+				<button class="difficult__button-start">Старт</button>
 			</div>
-			<button class="difficult__button-start">Старт</button>
+		</div>
+
+		<div class="screen-play screen-play_hidden screen">
+
 		</div>
 	</div>
 
-	
+	<script src="game.js"></script>
 </body>
+
 </html>
