--- a/index.html
+++ b/index.html
@@ -1,34 +1,45 @@
 <!DOCTYPE html>
 <html lang="ru">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Игра</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Игра</title>
-	<link rel="stylesheet" href="style.css">
-</head>
+    <body>
+        <div class="game">
+            <div class="screen-difficult screen">
+                <div class="difficult block-message">
+                    <p class="difficult__title">Выберите сложность</p>
+                    <div class="difficult__field-buttons">
+                        <button
+                            class="difficult__button-level"
+                            data-level="easy"
+                        >
+                            1
+                        </button>
+                        <button
+                            class="difficult__button-level"
+                            data-level="middle"
+                        >
+                            2
+                        </button>
+                        <button
+                            class="difficult__button-level"
+                            data-level="hard"
+                        >
+                            3
+                        </button>
+                    </div>
+                    <button class="difficult__button-start">Старт</button>
+                </div>
+            </div>
 
-<body>
-	<div class="game">
-		<div class="screen-difficult screen">
-			<div class="difficult block-message">
-				<p class="difficult__title">Выберите сложность</p>
-				<div class="difficult__field-buttons">
-					<button class="difficult__button-level" data-level="easy">1</button>
-					<button class="difficult__button-level" data-level="middle">2</button>
-					<button class="difficult__button-level" data-level="hard">3</button>
-				</div>
-				<button class="difficult__button-start">Старт</button>
-			</div>
-		</div>
+            <div class="screen-play screen-play_hidden screen"></div>
+        </div>
 
-		<div class="screen-play screen-play_hidden screen">
-
-		</div>
-	</div>
-
-	<script src="game.js"></script>
-</body>
-
+        <script src="src/game.js"></script>
+    </body>
 </html>
