искал костыли и подключал хаски

--- a/index.html
+++ b/index.html
@@ -14,24 +14,9 @@
                 <div class="difficult block-message">
                     <p class="difficult__title">Выберите сложность</p>
                     <div class="difficult__field-buttons">
-                        <button
-                            class="difficult__button-level"
-                            data-level="easy"
-                        >
-                            1
-                        </button>
-                        <button
-                            class="difficult__button-level"
-                            data-level="middle"
-                        >
-                            2
-                        </button>
-                        <button
-                            class="difficult__button-level"
-                            data-level="hard"
-                        >
-                            3
-                        </button>
+                        <button class="difficult__button-level" data-level="easy">1</button>
+                        <button class="difficult__button-level" data-level="middle">2</button>
+                        <button class="difficult__button-level" data-level="hard">3</button>
                     </div>
                     <button class="difficult__button-start">Старт</button>
                 </div>
