from home sun 02.10.22

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
                     <button class="header__button-start-again button-start">Начать заново</button>
                 </div>
 
-                <div class="field-cards"></div>
+                <div class="field-play">
+                    <div class="field-play__block-cards">
+                    </div>
+                </div>
             </div>
         </div>
 
